--- a/getShareCodes/Dockerfile
+++ b/getShareCodes/Dockerfile
@@ -9,7 +9,7 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositorie
     && rm -rf /var/cache/apk/* \
     && echo "Asia/Shanghai" > /etc/timezone && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
     && git clone https://gitee.com/rhysn/Run_JDScripts_Docker.git /Run_JDScripts_Docker \
-    && mkdir shareCodes
+    && mkdir ShareCodes
     
 WORKDIR /
 
