--- a/config/getShareCodes.env
+++ b/config/getShareCodes.env
@@ -4,6 +4,9 @@ REPOSITORY_HOST=
 SHARECODESPATH=
 #获取日志的容器名称
 CONTAINER_NAME=jd1&jd2&jd3&jd4&jd5
-
+#git用户邮箱
+GITUSEREMAIL=
+#git用户名
+GITUSERNAME=
 
 
