--- a/getCookies/Dockerfile
+++ b/getCookies/Dockerfile
@@ -1,18 +1,21 @@
-FROM alpine:latest
+FROM python:alpine
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories \
-    && apk update && apk add --no-cache tzdata moreutils python3 curl \
+    && apk --update add --no-cache tzdata moreutils curl \
+    && apk add --no-cache libxml2-dev libxslt-dev libffi-dev gcc musl-dev libgcc openssl-dev \
+    && apk add --no-cache jpeg-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev harfbuzz-dev fribidi-dev \
     && curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python3 get-pip.py \
     && python3 -m pip install -i https://mirrors.ustc.edu.cn/pypi/web/simple pip -U \
     && python3 -m pip config set global.index-url https://mirrors.ustc.edu.cn/pypi/web/simple \
+    && python3 -m pip install --upgrade pip \
     && rm -rf /var/cache/apk/* \
     && echo "Asia/Shanghai" > /etc/timezone && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
     && mkdir App
-    
+
 WORKDIR /
-COPY requirements.txt /App/requirements.txt
-COPY views /App/views
-COPY getJDCookie.py /App/getJDCookie.py
-RUN python3 -m pip install -r /App/requirements.txt
-    
+COPY /getCookies/requirements.txt /App/requirements.txt
+COPY /getCookies/views /App/views
+COPY /getCookies/getJDCookie.py /App/getJDCookie.py
+RUN python3 -m pip install --upgrade -r /App/requirements.txt
+
 CMD ["python3", "/App/getJDCookie.py"]
