--- a/getCookies/requirements.txt
+++ b/getCookies/requirements.txt
@@ -1,4 +1,9 @@
-bottle==0.12.19
+click==7.1.2
+Flask==1.1.2
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
 Pillow==8.2.0
 qrcode==6.1
 requests==2.25.1
