--- a/getCookies/uwsgi.ini
+++ b/getCookies/uwsgi.ini
@@ -1,3 +1,8 @@
 [uwsgi]
-wsgi-file = /app/getJDCookie.py         # 指定要加载的WSGI文件，也即包含Flask实例(app)的文件名称
-callable = app             # 指出uWSGI加载的模块中哪个变量将被调用， 也即Flask实例名称
+chdir = /app
+socket = 33523
+wsgi-file = getJDCookie.py
+callable = app
+plugin = python3
+processes = %(%k * 2)
+threads = %(%k * 20)
