--- a/getCookies/Dockerfile
+++ b/getCookies/Dockerfile
@@ -3,8 +3,8 @@ COPY getCookies/requirements.txt /requirements.txt
 WORKDIR /
 RUN sed -i 's/^\(deb\|deb-src\) \([^ ]*\) \(.*\)/\1 http:\/\/mirrors.ustc.edu.cn\/ubuntu \3/' /etc/apt/sources.list \
     && apt update && apt install --no-cache curl python3 \
-    && apt install --no-cache libxml2-dev libxslt-dev libffi-dev gcc musl-dev libgcc openssl-dev \
-    && apt install --no-cache jpeg-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev \
+    && apt install -y libxml2-dev libxslt-dev libffi-dev gcc musl-dev libgcc openssl-dev \
+    && apt install -y jpeg-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev \
     && curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python get-pip.py \
     && python -m pip install -i https://mirrors.ustc.edu.cn/pypi/web/simple pip -U \
     && python -m pip config set global.index-url https://mirrors.ustc.edu.cn/pypi/web/simple \
@@ -16,7 +16,7 @@ FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND="noninteractive"
 COPY --from=builder /usr/local/lib /usr/local/lib
 RUN sed -i 's/^\(deb\|deb-src\) \([^ ]*\) \(.*\)/\1 http:\/\/mirrors.ustc.edu.cn\/ubuntu \3/' /etc/apt/sources.list \
-    && apt update && apt install --no-cache tzdata python3 uwsgi-plugin-python3 \
+    && apt update && apt install -y tzdata python3 uwsgi-plugin-python3 \
     && echo "Asia/Shanghai" > /etc/timezone && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
     && mkdir getCookies
 
