--- a/getCookies/Dockerfile
+++ b/getCookies/Dockerfile
@@ -2,13 +2,14 @@ FROM ubuntu:20.04 AS builder
 COPY getCookies/requirements.txt /requirements.txt
 WORKDIR /
 RUN sed -i 's/^\(deb\|deb-src\) \([^ ]*\) \(.*\)/\1 http:\/\/mirrors.ustc.edu.cn\/ubuntu \3/' /etc/apt/sources.list \
-    && apt update && apt install -y curl python3 python3-distutils \
+    && apt update && apt install -y curl python3 python3-distutils python3-dev gcc \
+    && ln -s /usr/bin/python3 /usr/bin/python
     && curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python3 get-pip.py \
-    && python3 -m pip install -i https://mirrors.ustc.edu.cn/pypi/web/simple pip -U \
-    && python3 -m pip config set global.index-url https://mirrors.ustc.edu.cn/pypi/web/simple \
-    && python3 -m pip install --upgrade pip \
-    && python3 -m pip install uwsgi \
-    && python3 -m pip install --upgrade -r requirements.txt
+    && python -m pip install -i https://mirrors.ustc.edu.cn/pypi/web/simple pip -U \
+    && python -m pip config set global.index-url https://mirrors.ustc.edu.cn/pypi/web/simple \
+    && python -m pip install --upgrade pip \
+    && python -m pip install uwsgi \
+    && python -m pip install --upgrade -r requirements.txt
 
 FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND="noninteractive"
