--- a/getCookies/Dockerfile
+++ b/getCookies/Dockerfile
@@ -3,7 +3,7 @@ COPY getCookies/requirements.txt /requirements.txt
 WORKDIR /
 RUN sed -i 's/^\(deb\|deb-src\) \([^ ]*\) \(.*\)/\1 http:\/\/mirrors.ustc.edu.cn\/ubuntu \3/' /etc/apt/sources.list \
     && apt update && apt install -y curl python3 python3-distutils python3-dev gcc \
-    && ln -s /usr/bin/python3 /usr/bin/python
+    && ln -s /usr/bin/python3 /usr/bin/python \
     && curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python3 get-pip.py \
     && python -m pip install -i https://mirrors.ustc.edu.cn/pypi/web/simple pip -U \
     && python -m pip config set global.index-url https://mirrors.ustc.edu.cn/pypi/web/simple \
