--- a/getCookies/uwsgi.ini
+++ b/getCookies/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 chdir = /app
 socket = 33523
-wsgi-file = getJDCookie.py
+wsgi-file = app/getJDCookie.py
 callable = app
 plugin = python3
 processes = %(%k * 2)
