--- a/getCookies/uwsgi.ini
+++ b/getCookies/uwsgi.ini
@@ -1,7 +1,8 @@
 [uwsgi]
-chdir = /app
+chdir = /getCookies/app
 socket = 33523
-wsgi-file = app/getJDCookie.py
+wsgi-file = 
+app/getJDCookie.py
 callable = app
 plugin = python3
 processes = %(%k * 2)
