--- a/getCookies/uwsgi.ini
+++ b/getCookies/uwsgi.ini
@@ -1,8 +1,7 @@
 [uwsgi]
 chdir = /getCookies/app
 socket = 33523
-wsgi-file = 
-app/getJDCookie.py
+wsgi-file = app/getJDCookie.py
 callable = app
 plugin = python3
 processes = %(%k * 2)
