--- a/getCookies/uwsgi.ini
+++ b/getCookies/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 chdir = /getCookies/app
-socket = 33523
-wsgi-file = app/getJDCookie.py
+socket = 33521
+wsgi-file = /getCookies/app/getJDCookie.py
 callable = app
 plugin = python3
 processes = %(%k * 2)
