--- a/getCookies/uwsgi.ini
+++ b/getCookies/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 chdir = /getCookies/app
-socket = 33521
+socket = :33521
 wsgi-file = /getCookies/app/getJDCookie.py
 callable = app
 plugin = python3
