--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,7 @@ services:
       - ./config/getCookies.env
     volumes:
       - ./config:/config
+      - ./logs/uwsgi:/logs
     networks:
       - jdcookies
   jdnginx:
