--- a/nginx/templates/jdgetcookies.conf.template
+++ b/nginx/templates/jdgetcookies.conf.template
@@ -7,4 +7,8 @@ server {
        include uwsgi_params;
        uwsgi_pass ${APP_CONTAINER_NAME}:${APP_CONTAINER_PORT};
      }
+    location ^~ /status {
+       include uwsgi_params;
+       uwsgi_pass ${APP_CONTAINER_NAME}:${APP_CONTAINER_PORT}/status;
+     }
 }
