--- a/nginx/templates/jdgetcookies.conf.template
+++ b/nginx/templates/jdgetcookies.conf.template
@@ -9,6 +9,6 @@ server {
      }
     location ^~ /status {
        include uwsgi_params;
-       uwsgi_pass ${APP_CONTAINER_NAME}:${APP_CONTAINER_PORT}/status;
+       uwsgi_pass ${APP_CONTAINER_NAME}:${APP_CONTAINER_PORT};
      }
 }
