--- a/nginx/templates/jdgetcookies.conf.template
+++ b/nginx/templates/jdgetcookies.conf.template
@@ -3,7 +3,7 @@ server {
     listen  [::]:${PORT};
     server_name  ${HOST};
     
-    location ^~ / {
+    location / {
        include uwsgi_params;
        uwsgi_pass ${APP_CONTAINER_NAME}:${APP_CONTAINER_PORT};
     }
